--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,12 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
+	<script defer src='/app.js'></script>
 </body>
 </html>
