--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset='utf-8'>
+	<meta name="description" content="This is a website where you can add photos to frames.">
+	<meta name="keywords" content="TwibbonKu, Twibboniez, Twibbon">
+	<meta name="author" content="Ferry Ayunda">
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Twibbonku - Free Twibbon, No Watermark</title>
