--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
 
 <body>
 	<script defer src='/app.js'></script>
-	<script defer src='/alert.js'></script>
+	<script defer src=''></script>
 </body>
 </html>
